<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="576dp"
        android:autofillHints="restaurants"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/addRestaurant"
        android:importantForAutofill="yes"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userInput"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choices"
        android:layout_width="368dp"
        android:layout_height="262dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/choice"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput" />


    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="176dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="47dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/choices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userInput"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/choose"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choices" />

    <EditText
        android:id="@+id/removeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/removeChoice"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choices" />

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/removeChoice"
        app:layout_constraintBottom_toTopOf="@+id/choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/removeInput"
        app:layout_constraintTop_toBottomOf="@+id/choices" />
</androidx.constraintlayout.widget.ConstraintLayout>